--- a/src/app/modules/exam/add-exan copy/add-exan.component.html
+++ b/src/app/modules/exam/add-exan copy/add-exan.component.html
@@ -1,10 +1,12 @@
 <form [formGroup]="myForm" (ngSubmit)="submit()">
 
     <div class="form-group">
+        <input formcontrolname="name">
         <input formControlName="file" id="file" type="file" class="form-control" accept="image/*" (change)="onFileChange($event)">
         <div *ngIf="!myForm" class="alert alert-danger">
             <div>חובה לבחור תמונה.</div>
         </div>
+        <input formcontrolname="fileSource">
     </div>
 
     <img [src]="imageSrc" *ngIf="imageSrc" style="height: 300px; width:300px">
