--- a/src/app/modules/exam/add-exan/add-exan.component.html
+++ b/src/app/modules/exam/add-exan/add-exan.component.html
@@ -1,26 +1,27 @@
-<!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<mat-dialog-content class="mat-typography">
+    <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 
 <div class="wrapper fadeInDown">
     <div id="formContent">
-        <!-- Tabs Titles -->
+        Tabs Titles -->
 
-<!-- Icon -->
-<!-- <div class="fadeIn first">
+    <!-- Icon -->
+    <!-- <div class="fadeIn first">
             <img src="http://danielzawadzki.com/codepen/01/icon.svg" id="icon" alt="User Icon" />
         </div> -->
 
-<!-- Login Form -->
-<!-- <form [formGroup]="loginForm">
+    <!-- Login Form -->
+    <!-- <form [formGroup]="loginForm">
             <input type="text" id="login" class="fadeIn second" name="login" placeholder="user name" name="userName" formControlName="email" #id> -->
 
-<!-- <input type="text" id="password" class="fadeIn third" name="login" > -->
+    <!-- <input type="text" id="password" class="fadeIn third" name="login" > -->
 
 
-<!-- <mat-label>Enter your password</mat-label> -->
-<!-- <input id="password" class="fadeIn third" name="login" placeholder="password" formControlName="password" #password matInput [type]="hide ? 'password' : 'text'">
+    <!-- <mat-label>Enter your password</mat-label> -->
+    <!-- <input id="password" class="fadeIn third" name="login" placeholder="password" formControlName="password" #password matInput [type]="hide ? 'password' : 'text'">
             <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
       </button>
 
@@ -28,29 +29,37 @@
             <input type="submit" class="fadeIn fourth" value="Log In" (click)="LogIn(id.value,password.value)">
         </form> -->
 
-<!-- Remind Passowrd -->
-<!-- <div id="formFooter">
+    <!-- Remind Passowrd -->
+    <!-- <div id="formFooter">
             <a class="underlineHover" href="pass">Forgot Password?</a>
         </div>
 
     </div>
 </div> -->
 
+    <!-- <div  [formGroup]="addExamForm"> -->
+        <form >
+            <mat-form-field appearance="fill">
+                <mat-label>patient</mat-label>
+                <mat-select [(ngModel)]="selectedPatient" name="patient">
+                     <mat-option *ngFor="let id of patientIds" [value]="id" formControlName="patientId">
+                        {{id}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <p> Selected Patient: {{selectedPatient}} </p>
+        </form>
+    <!-- </div> -->
 
-<form [formGroup]="addExamForm">
-    <mat-form-field appearance="fill">
-        <mat-label>Favorite food</mat-label>
-        <mat-select [(ngModel)]="selectedPatient" name="food">
-            <mat-option *ngFor="let id of patientIds" [value]="id">
-                {{id}}
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
-    <p> Selected food: {{selectedPatient}} </p>
-</form>
-
-
-
+</mat-dialog-content>
+<div mat-dialog-actions>
+    <button mat-button (click)="onNoClick()">No Thanks</button>
+    <button mat-button (click)="sendExam()" cdkFocusInitial>Ok</button>
+</div>
+<!-- <mat-dialog-actions align="end">
+    <button mat-button mat-dialog-close>Cancel</button>
+     <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Install</button> 
+  </mat-dialog-actions> -->
 
 
 
