--- a/src/app/modules/exam/add-exan/add-exan.component.html
+++ b/src/app/modules/exam/add-exan/add-exan.component.html
@@ -1,5 +1,5 @@
 
-<mat-dialog-content >
+<div mat-dialog-content>
         <form >
             <mat-form-field appearance="fill">
                 <mat-label>patient</mat-label>
@@ -21,7 +21,7 @@
 
         </p>
 
-</mat-dialog-content>
+    </div>
 <div mat-dialog-actions>
     <button  mat-raised-button  mat-dialog-close (click)="onNoClick()" cdkFocusInitial>No Thanks</button>
     <button  mat-raised-button color="primary" mat-button (click)="sendExam()" cdkFocusInitial>Ok</button>
