--- a/src/app/modules/exam/by-lab-id/by-lab-id.component.html
+++ b/src/app/modules/exam/by-lab-id/by-lab-id.component.html
@@ -1,3 +1,8 @@
+<mat-form-field appearance="fill">
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex.ium" #input>
+</mat-form-field>
+
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
     <!-- Position Column -->
@@ -16,6 +21,17 @@
     <ng-container matColumnDef="doctorName">
         <th mat-header-cell *matHeaderCellDef> doctor name </th>
         <td mat-cell *matCellDef="let element"> {{element.doctorName}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="doctorComments">
+        <th mat-header-cell *matHeaderCellDef> doctor comments</th>
+        <td mat-cell *matCellDef="let element"> {{element.doctorComments}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="edit">
+        <th mat-header-cell *matHeaderCellDef> edit </th>
+       
+        <td mat-cell> <button mat-raised-button color="primary">edit</button> </td>
     </ng-container>
 
     <!-- computerDiagnosis Column
